[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://other/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://other/Goal.tscn" type="PackedScene" id=3]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Active" type="Node" parent="."]

[node name="Ball" parent="Active" instance=ExtResource( 2 )]
position = Vector2( -36.1357, 76.392 )

[node name="Goal" parent="Active" instance=ExtResource( 3 )]
position = Vector2( -38.3545, 128.694 )

[node name="Timer" type="Timer" parent="Active"]

[node name="Objects" type="Node" parent="."]
[connection signal="body_entered" from="Active/Ball" to="." method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Active/Goal" to="." method="_on_Goal_body_entered"]
[connection signal="timeout" from="Active/Timer" to="." method="_on_Timer_timeout"]
